# agytorna

./: CMakeLists.txt  README.md  agytorna.db  agytorna.sql  databasemanager.cpp  databasemanager.h  gamelogic.cpp  gamelogic.h  gametypes.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qamanager.cpp  qamanager.h  testrunner.cpp  testrunner.h
